modify build.sh